First compile on CentOS7/64bit: minor adjustments. Started new Parser: parse keys in dependency order.

--- a/lib/src/Makefile
+++ b/lib/src/Makefile
@@ -1,14 +1,21 @@
 
-SRC:=${wildcard *.adb}
+SRC:=${wildcard fits-*.adb}
+SRC+=fits.adb
 OBJ:=${SRC:.adb=.o}
 
-all: libfits_io.a
+SRCIO:=${wildcard fits_io*.adb}
+OBJIO:=${SRCIO:.adb=.o}
+
+all: libfits_io.a libfitsio_io.a
 
 %.o: %.adb
-	gnatmake -g $< -bargs E static
+	gnatmake -gnat12  -g $< -bargs E static
 
 libfits_io.a : $(OBJ)
 	ar r libfits_io.a  $(OBJ)
 
+libfitsio_io.a : $(OBJIO)
+	ar r libfitsio_io.a  $(OBJIO)
+
 clean:
-	rm -f *.o *.ali libfits_io.a core
+	rm -f *.o *.ali libfits_io.a libfitsio_io.a core
