FITSlib File vs HDU division: ads spec-file adjustmens and notes/comments.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -9,10 +9,7 @@ LIB=fits_io
 all:
 	gnatmake -g -gnat12 -we create.adb  -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 	gnatmake -g -gnat12 -we convert.adb -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
-
-
-list:
-	gnatmake -g -gnat12 -we list.adb    -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfitsio_io -bargs -E #-largs -static
+	gnatmake -g -gnat12 -we list.adb    -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 
 
 clean:
