fits: changes build to fits.gpr

--- a/fits/Makefile
+++ b/fits/Makefile
@@ -9,6 +9,8 @@ FITS_IO_DIR=./lib/src
 INCDIR=../lib/src
 LIBDIR=../lib
 LIB=fits_io
+#gnatmake -g -gnat12 -we main.adb -o fits -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -I$(FITS_IO_DIR) -I$(ZLIBADA_DIR) -I$(PNG_DIR) -bargs -E -static -largs -lfits_io -L$(ZLIB_DIR) -lz
+
 
 all : fits
 
@@ -20,7 +22,7 @@ build_date.ads :
 	@echo "end Build_Date;" >> build_date.ads
 
 fits : build_date.ads
-	gnatmake -g -gnat12 -we main.adb -o fits -I$(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -I$(FITS_IO_DIR) -I$(ZLIBADA_DIR) -I$(PNG_DIR) -bargs -E -static -largs -lfits_io -L$(ZLIB_DIR) -lz
+	gnatmake -Pfits	
 
 clean:
-	rm -f build_date.ads fits b~main.ad?  *.ali *.o *~
+	rm -f build_date.ads fits obj/*
