ALG DataAccess: adds convert Float32->Int16 to examples (started not ready yet)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,5 @@
 
-INCDIR=-I../lib/src -I../lib/src/parser
+INCDIR=-I../lib/src -I../lib/src/parser -I../algorithm-dataaccess
 LIBDIR=../lib/lib
 LIB=fits_io
 
@@ -9,12 +9,13 @@ LIB=fits_io
 all:
 	gnatmake -g -gnat12 -we create.adb  $(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 	gnatmake -g -gnat12 -we convert.adb $(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
+	gnatmake -g -gnat12 -we convertf2i.adb $(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 	gnatmake -g -gnat12 -we list.adb    $(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 	gnatmake -g -gnat12 -we reserved_keys.adb    $(INCDIR) -aL$(LIBDIR) -aO$(LIBDIR) -largs -lfits_io -bargs -E #-largs -static
 
 
 clean:
-	rm -f convert.fit b~convert.ad? convert create.fits create b~create.ad? list b~list.ad? reserved_keys b~reserved_keys.ad?  *.ali *.o *~
+	rm -f convert.fit b~convert.ad? convertf2i convert create.fits create b~create.ad? list b~list.ad? reserved_keys b~reserved_keys.ad?  *.ali *.o *~
 
 
 
@@ -27,4 +28,8 @@ run:
 	fitsheader convert.fits
 	fits2bitmap convert.fits
 	gio open convert.png
+	./convertf2i convert.fits
+	fitsheader convertf2i.fits
+	fits2bitmap convertf2i.fits
+	gio open convertf2i.png
 
