--- a/examples/Makefile
+++ b/examples/Makefile
@@ -30,3 +30,8 @@ run:
 	fits2bitmap bin/convert.fits
 	gio open bin/convert.png
 	./bin/minmax bin/convert.fits
+
+
+runcutout:
+	./bin/cutout ../data/NANTEN2/FOCx38i0101t_c0f.fits 400 400 600 600 3.5
+	./bin/cutout ../data/NANTEN2/WFPC2ASSNu5780205bx.fits 50 1 100 35 0.055555
