scaling: adds API to get UserUndefOut for case F->UI

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -35,3 +35,11 @@ run:
 runcutout:
 	./bin/cutoutalt_4 ../data/NANTEN2/FOCx38i0101t_c0f.fits 400 400 600 600 3.5
 	./bin/cutoutalt_4 ../data/NANTEN2/WFPC2ASSNu5780205bx.fits 50 1 100 35 0.055555
+
+testminmax:
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0001.fits
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0002.fits
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0003.fits
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0004.fits
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0005.fits
+	./bin/minmax_v3_alt_4 ../data/www.cv.nrao.edu/fits/data/tests/pg93/tst0006.fits
